Sender over AvvikSøknadIm til årskvantum (#6459)
* Sender over AvvikSøknadIm til årskvantum

* Sender over AvvikSøknadIm til årskvantum (bruker UDEFINERT når søknad ikke finnes)